# spellChecker

./: CMakeLists.txt  readme.txt
shared/: CMakeLists.txt  tdefs.h
spellChecker/: CMakeLists.txt  main.cpp  stdafx.h
spellCheckerDll/: CMakeLists.txt  dllmain.cpp  fileParser.cpp  fileParser.h  spellChecker.cpp  spellChecker.h  spellCheckerImpl.cpp  spellCheckerImpl.h  stdafx.h
tests/: main.cpp  stdafx.h
